1998-09-14  Ulrich Drepper  <drepper@cygnus.com>

	* nscd/pwdcache.c (cache_pwdinit): Allocate uidtbl of correct size.

1998-09-14 15:29  Ulrich Drepper  <drepper@cygnus.com>

	* stdio-common/Makefile (headers): Remove bits/stdio_lim.h.
	(install-others): Add bits/stdio_lim.h.
	Add rule to install bits/stdio_lim.h.

	* sysdeps/unix/sysv/sysv4/solaris2/sparc/Dist: New file.

	* Makefile (distribute): Add include/sys/mman.h.

	* sysdeps/powerpc/Dist: Add dl-machine.c and dl-start.S.
	* sysdeps/unix/sysv/linux/Dist: Add sys/sendfile.h.
	* sysdeps/unix/sysv/linux/arm/Dist: Add init-first.h.

	* grp/initgroups.c: Include stdlib.h.
	Patch by Zack Weinberg.

1998-09-14 22:46  Tim Waugh  <tim@cyberelk.demon.co.uk>

	* posix/wordexp-test.c: Chet Ramey confirmed that bash's behaviour
	for field-splitting :abc: is correct, and that two fields should
	result. Revert tests to reflect this.

	* posix/wordexp.c (w_emptyword): Remove function.
	(exec_comm): Don't use w_emptyword.
	(parse_param): Likewise.

1998-09-14 15:00  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/arm/fpu/Dist: Moved to...
	* sysdeps/arm/Dist: ...here.
	* sysdeps/posix/Dist: Removed.
	* sysdeps/unix/sysv/linux/Dist: Move sys/debugreg.h to...
	* sysdeps/unix/sysv/linux/i386/Dist: ...here.

1998-08-26  Geoff Keating  <geoffk@ozemail.com.au>

	* csu/init.c: Don't drag _IO_2_1_stdin_ into the executable.

1998-09-14 11:26  Ulrich Drepper  <drepper@cygnus.com>

	* wcsmbs/wcsmbs-tst1.c: Include stdlib.h.

1998-09-14  Thorsten Kukuk  <kukuk@vt.uni-paderborn.de>

	* libc-work/nis/nss_nisplus/nisplus-service.c
	(_nss_nisplus_parse_servent): Convert port in network byte order.

1998-09-14 07:53 -0400  Zack Weinberg  <zack@rabi.phys.columbia.edu>

	* stdlib/stdlib.h: Add a switch, __need_malloc_and_calloc,
	to provide only malloc and calloc.
	* include/stdlib.h: Support the above.
	* string/bits/string2.h: Use __need_malloc_and_calloc when
	including stdlib.h.
	(__string2_1bptr_p): Avoid -Wbad-function-cast warnings.